--- a/servicio-productos/pom.xml
+++ b/servicio-productos/pom.xml
@@ -73,6 +73,11 @@
 			<artifactId>spring-hateoas-jsonapi</artifactId>
 			<version>2.1.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
